@@ -1,0 +1,25 @@
+blob
+mark :1
+data 20
+1234567890123456789
+
+commit refs/heads/master
+mark :2
+committer Ralf Schlatterbeck <rsc@runtux.com> 70 +0000
+data 14
+First commit.
+M 100644 :1 README
+
+blob
+mark :3
+data 20
+0123456789012345678
+
+commit refs/heads/master
+mark :4
+committer Ralf Schlatterbeck <rsc@runtux.com> 190 +0000
+data 15
+Second commit.
+from :2
+M 100644 :3 README
+
