@@ -1,0 +1,4 @@
+## Test the tick optiojn of timequake
+read <min.fi
+timequake --tick
+write -
