@@ -2,6 +2,7 @@
 
 Repository head::
      Experimental Perforce (p4) mirroring support in repotool.
+     Added timequake --tick option.
 
 4.37: 2023-05-28::
      Add experimental support for brz/Breezy.
